--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -521,7 +521,7 @@
             </div>
             
             <div class="category-section">
-              <h4>✉️ Pauline Letter</h4>
+              <h4>✉️ Pauline letters</h4>
               <div class="book-list">
                 <a href="/verses?passage=Romans+1" class="book-link">Romans</a>
                 <a href="/verses?passage=1+Corinthians+1" class="book-link">1 Corinthians</a>
@@ -540,7 +540,7 @@
             </div>
             
             <div class="category-section">
-              <h4>📬 General Letter & Revelation</h4>
+              <h4>📬 General letters & Revelation</h4>
               <div class="book-list">
                 <a href="/verses?passage=Hebrews+1" class="book-link">Hebrews</a>
                 <a href="/verses?passage=James+1" class="book-link">James</a>
