--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -398,12 +398,12 @@
     <header class="header">
       <div>
         <div class="title">ABLE 👦🏼🧒🏻</div>
-        <div class="subtitle">ABLE is a bible paraphrase with simple words <span class="text-transition">
+        <div class="subtitle">ABLE is a Bible paraphrase with simple words <span class="text-transition">
           <span class="text-option visible">for special needs</span>
           <span class="text-option">for anyone</span>
           <span class="text-option">for young learners</span>
           <span class="text-option">for new beginners</span>
-          <span class="text-option">for lower literacy</span>
+          <span class="text-option">for lower-literacy readers</span>
         </span></div>
       </div>
       <div class="header-buttons">
